# CorridorROS1.0

./: LICENSE  README.md
fake_localization/: CMakeLists.txt  package.xml
fake_localization/scripts/: static_odom_broadcaster.py
motion_planner_baselines/bezier_local_planner/: CMakeLists.txt  README.md  blp_plugin.xml  package.xml
motion_planner_baselines/bezier_local_planner/include/bezier_local_planner/: bezier_local_planner.h  bezier_local_planner_ros.h  utils.h
motion_planner_baselines/bezier_local_planner/params/: bezier_local_planner_params.yaml
motion_planner_baselines/bezier_local_planner/src/: bezier_local_planner.cpp  bezier_local_planner_ros.cpp
motion_planner_baselines/dwa_planner/: CMakeLists.txt  README.md  blp_plugin.xml  package.xml
motion_planner_baselines/dwa_planner/include/dwa_planner/: dwa_planner.h  dwa_planner_ros.h  utils.h
motion_planner_baselines/dwa_planner/params/: dwa_planner_params.yaml
motion_planner_baselines/dwa_planner/src/: dwa_planner.cpp  dwa_planner_ros.cpp
motion_planner_baselines/mpc_tracer/: README.md
motion_planner_baselines/mpc_tracer/api2python/: CMakeLists.txt  blp_plugin.xml  package.xml
motion_planner_baselines/mpc_tracer/api2python/include/api2python/: api2python_ros.h  utils.h
motion_planner_baselines/mpc_tracer/api2python/params/: local_costmap_params.yaml
motion_planner_baselines/mpc_tracer/api2python/src/: api2python_ros.cpp
motion_planner_baselines/mpc_tracer/api2python/srv/: api_info.srv
motion_planner_baselines/participant_game_lattice/: CMakeLists.txt  blp_plugin.xml  package.xml
motion_planner_baselines/participant_game_lattice/include/participant_game_lattice/: participant_game_lattice.h  participant_game_lattice_ros.h  utils.h
motion_planner_baselines/participant_game_lattice/launch/: move_base.launch
motion_planner_baselines/participant_game_lattice/params/: participant_game_lattice_params.yaml  rviz.rviz
motion_planner_baselines/participant_game_lattice/src/: participant_game_lattice.cpp  participant_game_lattice_ros.cpp
motion_planner_baselines/teb_local_planner/include/teb_local_planner/: distance_calculations.h  teb_local_planner_ros.h  visualization.h
motion_planner_baselines/teb_local_planner/scripts/: dynamic_obstacle_transform.py
motion_planner_baselines/teb_local_planner/src/: homotopy_class_planner.cpp  teb_local_planner_ros.cpp  visualization.cpp
motion_planner_baselines/time_bounded_lattice/: CMakeLists.txt  blp_plugin.xml  package.xml
motion_planner_baselines/time_bounded_lattice/include/time_bounded_lattice/: time_bounded_lattice.h  time_bounded_lattice_ros.h  utils.h
motion_planner_baselines/time_bounded_lattice/params/: time_bounded_lattice_params.yaml
motion_planner_baselines/time_bounded_lattice/src/: time_bounded_lattice.cpp  time_bounded_lattice_ros.cpp
move_base_bridge/: CMakeLists.txt  package.xml
move_base_bridge/algorithm_param/: bezier_local_planner_params.yaml  dwa_planner_params.yaml  participant_game_lattice_params.yaml  teb_local_planner_params.yaml  time_bounded_lattice_params.yaml
move_base_bridge/costmap_param/: costmap_common_params.yaml  dynamic_global_costmap_params.yaml  dynamic_local_costmap_params.yaml  static_global_costmap_params.yaml  static_local_costmap_params.yaml
move_base_bridge/launch/: move_base.launch  move_base_bridge.launch
pedsim_map/src/: sim_map.cpp
pedsim_ros_imp/dynamicvoronoi/: CMakeLists.txt
pedsim_ros_imp/dynamicvoronoi/include/dynamicvoronoi/: bucketedqueue.h  decision_graph.h  dynamicvoronoi.h  point.h
pedsim_ros_imp/dynamicvoronoi/launch/: dynamic_voronoi.launch
pedsim_ros_imp/dynamicvoronoi/src/: bucketedqueue.cpp  decision_graph.cpp  dynamicvoronoi.cpp  point.cpp
pedsim_ros_imp/pedsim_simulator/: CMakeLists.txt  package.xml
pedsim_ros_imp/pedsim_simulator/config/: PedsimSimulator.cfg
pedsim_ros_imp/pedsim_simulator/include/pedsim_simulator/: config.h  scene.h  simulator.h
pedsim_ros_imp/pedsim_simulator/include/pedsim_simulator/element/: agent.h
pedsim_ros_imp/pedsim_simulator/launch/: interface_teleop.launch  pedsim_simulator.launch  replay_helper.launch  robot_controller.launch  simulator.launch
pedsim_ros_imp/pedsim_simulator/rviz/: hallwayROS.rviz
pedsim_ros_imp/pedsim_simulator/scenes/: avoiding.xml  avoiding_simple.xml  crossing.xml  deciding.xml  example_env.xml  passing.xml  test.xml  test2.xml
pedsim_ros_imp/pedsim_simulator/scripts/: interface_teleop.py  interface_teleop_simple.py  robot_teleop.py
pedsim_ros_imp/pedsim_simulator/src/: config.cpp  scenarioreader.cpp  scene.cpp  simulator.cpp  simulator_node.cpp
pedsim_ros_imp/pedsim_simulator/src/element/: agent.cpp
pedsim_ros_imp/pedsim_visualizer/src/: sim_visualizer.cpp
robot_description/water_description/config/: joint_names_water_base.yaml
robot_description/water_description/launch/: appendix_for_real_water.launch  robot_description.launch  water_all_gazebo.launch  water_base_gazebo.launch
robot_description/water_description/meshes/: omni_60.stl
robot_description/water_description/param/: robot_constrains.yaml
robot_description/water_description/urdf/: VLP-16.xacro  appendix_for_real_water_base.xacro  depthcam.xacro  omni_60.urdf.xacro  water_all.xacro  water_base.xacro
robot_description/wheeltec_description/: CMakeLists.txt  package.xml
robot_description/wheeltec_description/launch/: robot_description.launch
robot_description/wheeltec_description/meshes/mini_akm/: base_link.STL  camera_link.STL  left_front_wheel_link.STL  left_rear_wheel_link.STL  right_front_wheel_link.STL  right_rear_wheel_link.STL  rplidar_link.STL
robot_description/wheeltec_description/param/: robot_constrains.yaml
robot_description/wheeltec_description/urdf/: imu.xacro  material.xacro
robot_description/wheeltec_description/urdf/mini_akm/: mini_akm.urdf  mini_akm.xacro  miniakm_body.xacro  miniakm_camera.xacro  miniakm_rplidar.xacro  miniakm_transmission.xacro  wheeltec.gv
