<?xml version="1.0"?>
<package format="2">
    <name>fake_localization</name>
    <version>1.16.7</version>
    <description>A ROS node that simply forwards odometry information.</description>
    <author>Arvin</author>
    <author>zhangqianyi@mail.nankai.edu.cn</author>
    <maintainer email="zhangqianyi@mail.nankai.edu.cn">Arvin</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>tf2_geometry_msgs</build_depend>

    <depend>geometry_msgs</depend>
    <depend>rospy</depend>
    <depend>tf2_ros</depend>

</package>
